--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "dev": "webpack-dev-server --devtool inline-source-map --progress --colors --hot --content-base build"
-   },
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -15,6 +15,7 @@
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "style-loader": "^0.13.0",
@@ -22,8 +23,14 @@
     "webpack": "^1.12.12"
   },
   "dependencies": {
+    "express": "^4.13.4",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "webpack-dev-server": "^1.14.1"
+    "react-redux": "^4.4.1",
+    "react-router": "^2.0.0",
+    "react-router-redux": "^4.0.0",
+    "redux": "^3.3.1",
+    "webpack-dev-server": "^1.14.1",
+    "wolfy87-eventemitter": "4.2.0"
   }
 }
